# opti-task-backend

./: Cargo.toml  diesel.toml
migrations/2025-05-26-091144_create_initial_tables/: down.sql  up.sql
migrations/2025-05-26-091625_setup_rls_policies/: down.sql  up.sql
migrations/2025-05-26-095200_add_timestamps_to_labels_and_time_entries/: down.sql  up.sql
src/: auth_utils.rs  db.rs  error_handler.rs  main.rs  models.rs  schema.rs
src/handlers/: analytics_handlers.rs  label_handlers.rs  mod.rs  project_handlers.rs  task_handlers.rs  task_label_handlers.rs  time_entry_handlers.rs
