[package]
name = "opti-task-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.3.1"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
diesel-async = { version = "0.5.2", features = ["postgres", "bb8"] }
diesel = { version = "2.2.10", features = ["postgres", "uuid", "chrono"] }


